<resources>
    <string name="app_name">UNIFIT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_rutinas">Rutinas</string>
    <string name="title_alimentacion">Alimentación</string>
    <string name="historial1_home">Historial de Ejercicios</string>
    <string name="historial2_home">Historial de Calorías</string>
    <string name="carbo">Carbohidratos</string>
    <string name="proteinas">Proteinas</string>
    <string name="grasas">  Grasas</string>
    <string name="descripcion_rutina">4 series, 12 repeticiones, 35kg, 60seg(descanso)</string>
    <string name="title_activity_lateral_menu">LateralMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="user">Usuario</string>
    <string name="seccion_1">Perfil</string>
    <string name="seccion_2">Amigos</string>
    <string name="otras_opciones">Configuraciones</string>
    <string name="opcion_1">Configuraciones</string>
    <string name="opcion_2">Ayuda</string>
    <string name="opcion_3">Cerrar sesión</string>
    <string name="profile">Perfil</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="comida1">\t\tDesayuno</string>
    <string name="comida2">\t\tAlmuerzo</string>
    <string name="comida3">\t\tCena</string>
    <string name="comida4">\t\tOtros</string>
    <string name="resumen">Resumen del día</string>
    <string name="calconsumidas">Calorías consumidas</string>
    <string name="calrestantes">Calorías restantes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancelar</string>
    <string name="instruccion">Búsqueda por alimentos</string>
    <string name="search">Buscar</string>
    <string name="add">Añadir</string>
    <string name="porcion">Porción</string>
    <string name="calorias">Calorías</string>
    <string name="reportar">Reportar Error</string>
    <string name="mensajesReportar">Indíquenos el error:</string>
    <string name="send">Enviar</string>
    <string name="comidas">Comidas</string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="otros">Otros</string>
    <string name="finalizar">Finalizar</string>
    <string name="config">Configuración</string>
    <string name="salir">Salir</string>
    <string name="perfil">Perfil</string>
    <string name="amigos">Amigos</string>
    <string name="rss">Redes Sociales</string>
    <string name="inicio">Inicio</string>
</resources>
