<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_amigos"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/amigos" />
        <item
            android:id="@+id/nav_rss"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/rss" />
    </group>

    <item android:title="@string/config">
        <menu>
            <item
                android:id="@+id/nav_config"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/config" />
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_people_outline_black_24dp"
                android:title="@string/salir" />
        </menu>
    </item>

</menu>
